no major changes

--- a/lab2/styleme.css
+++ b/lab2/styleme.css
@@ -2,6 +2,22 @@ body{
     background: linear-gradient(120deg, black, gray);
     font-family: 'Arial', sans-serif;
     padding: 20px;
+    
+}
+body::before{
+    content: "";
+    background-image: url('fam.jpeg');
+    background-repeat: no-repeat;
+    background-size: cover;
+   /* background-attachment: fixed;*/
+   opacity: 0.05;
+   position: absolute;
+   top: 0;
+   right: 0;
+   bottom: 0;
+   left: 0;
+   z-index: -1;
+
 }
 
 h1 {
