--- a/lab3/styles.css
+++ b/lab3/styles.css
@@ -10,7 +10,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    background-color: #f0f0f0;
+    background-color: aqua;
     border-bottom: 1px solid black;
 }
 
