--- a/lab4/workshopstyles.css
+++ b/lab4/workshopstyles.css
@@ -34,8 +34,8 @@ form header .select-container select {
     background-color: inherit;
     color: inherit;
     padding-right: 20px; /* Make space for the custom arrow */
-    -webkit-appearance: none;
-    -moz-appearance: none;
+    /*-webkit-appearance: none;
+    -moz-appearance: none;*/
     appearance: none;
 }
 
@@ -166,7 +166,6 @@ footer{
 
 footer input{
     background-color:rgb(169, 213, 169) ;
-    size: 50px;
 }
 
 .form-button {
