--- a/lab12/views/products.html
+++ b/lab12/views/products.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Products</title>
+  <title>Products</title>
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <h1>Products Page</h1>
-    <p>Welcome to our products page. Here you can find a list of our amazing products.</p>
-    <nav>
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/users">Users</a></li>
-        </ul>
-    </nav>
+  <h1>Products Page</h1>
+  <nav>
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/users">Users</a></li>
+    </ul>
+  </nav>
+
+  <form action="/products" method="post">
+    <label for="productName">Product Name:</label>
+    <input type="text" id="productName" name="productName"><br><br>
+  
+    <label for="price">Price:</label>
+    <input type="number" id="price" name="price"><br><br>
+  
+    <input type="submit" value="Submit">
+  </form>
+
+
 </body>
 </html>
